# BIAI

./: .gitignore  Dockerfile  RAG_AGENT_README.md  README.md  build_knowledge_base.py  build_knowledge_base_enhanced.py  enhanced_formatter.py  get_sheeet_data.py  knowledge_base_mcp_server.py  main.py  pyproject.toml  query_kb_simple.py  query_knowledge_base.py  requirements.txt  simple_rag_agent.py  smithery.yaml  test_mcp_integration.py
pro_data/: csv2json.py  mysql_schema_light_sampler.py
src/biai_server/: __init__.py  enhanced_formatter.py  server.py
tests/: test1.txt  test_cursor_mcp.md  test_kb.py
